--- a/ASR_models_comparison_pipeline.ipynb
+++ b/ASR_models_comparison_pipeline.ipynb
@@ -102,14 +102,14 @@
     "\n",
     "    def calculate_level_metrics(ref, hyp):\n",
     "        if not ref or not hyp:\n",
-    "            return {'WER': 1.0, 'CER': 1.0, 'MER': 1.0, 'WIL': 1.0, 'PIER': 1.0}\n",
+    "            return {'WER': 1.0, 'CER': 1.0, 'MER': 1.0, 'WIL': 1.0, 'PIWER': 1.0}\n",
     "        \n",
     "        return {\n",
     "            'WER': wer(ref, hyp),\n",
     "            'CER': cer(ref, hyp),\n",
     "            'MER': mer(ref, hyp),\n",
     "            'WIL': wil(ref, hyp),\n",
-    "            'PIER': 1 - len(set(ref.split()) & set(hyp.split())) / max(1, len(set(ref.split())))\n",
+    "            'PIWER': 1 - len(set(ref.split()) & set(hyp.split())) / max(1, len(set(ref.split())))\n",
     "        }\n",
     "    \n",
     "    return {\n",
@@ -497,7 +497,7 @@
     "        \n",
     "        f.write(\"МЕТРИКИ КАЧЕСТВА:\\n\")\n",
     "        f.write(\"{:<25} {:<10} {:<10} {:<10} {:<10} {:<10} {:<15} {:<15} {:<15}\\n\".format(\n",
-    "            \"Модель\", \"WER\", \"CER\", \"MER\", \"WIL\", \"PIER\", \"RTF\", \"Время (сек)\", \"Устройство\"))\n",
+    "            \"Модель\", \"WER\", \"CER\", \"MER\", \"WIL\", \"PIWER\", \"RTF\", \"Время (сек)\", \"Устройство\"))\n",
     "        \n",
     "        for model_name, results in all_results.items():\n",
     "            if model_name == 'diarization' or 'error' in results:\n",
@@ -514,7 +514,7 @@
     "                    metrics['Base']['CER'],\n",
     "                    metrics['Base']['MER'],\n",
     "                    metrics['Base']['WIL'],\n",
-    "                    metrics['Base']['PIER'],\n",
+    "                    metrics['Base']['PIWER'],\n",
     "                    round(float(time_str)/audio_duration, 2),\n",
     "                    time_str,\n",
     "                    device\n",
@@ -525,7 +525,7 @@
     "                    metrics['Lemmatized']['CER'],\n",
     "                    metrics['Lemmatized']['MER'],\n",
     "                    metrics['Lemmatized']['WIL'],\n",
-    "                    metrics['Lemmatized']['PIER'],\n",
+    "                    metrics['Lemmatized']['PIWER'],\n",
     "                    \"\",\n",
     "                    \"\",\n",
     "                    \"\"\n",
@@ -941,14 +941,14 @@
     "\n",
     "    def calculate_level_metrics(ref, hyp):\n",
     "        if not ref or not hyp:\n",
-    "            return {'WER': 1.0, 'CER': 1.0, 'MER': 1.0, 'WIL': 1.0, 'PIER': 1.0}\n",
+    "            return {'WER': 1.0, 'CER': 1.0, 'MER': 1.0, 'WIL': 1.0, 'PIWER': 1.0}\n",
     "        \n",
     "        return {\n",
     "            'WER': wer(ref, hyp),\n",
     "            'CER': cer(ref, hyp),\n",
     "            'MER': mer(ref, hyp),\n",
     "            'WIL': wil(ref, hyp),\n",
-    "            'PIER': 1 - len(set(ref.split()) & set(hyp.split())) / max(1, len(set(ref.split())))\n",
+    "            'PIWER': 1 - len(set(ref.split()) & set(hyp.split())) / max(1, len(set(ref.split())))\n",
     "        }\n",
     "    \n",
     "    return {\n",
@@ -977,7 +977,7 @@
     "def display_metrics(metrics):\n",
     "    result = \"МЕТРИКИ КАЧЕСТВА:\"\n",
     "    result += \"{:<15} {:<10} {:<10} {:<10} {:<10} {:<10}\\n\".format(\n",
-    "        \"Type\", \"WER\", \"CER\", \"MER\", \"WIL\", \"PIER\")\n",
+    "        \"Type\", \"WER\", \"CER\", \"MER\", \"WIL\", \"PIWER\")\n",
     "    \n",
     "    for level in ['Base', 'Lemmatized']:\n",
     "        result += \"{:<15} {:<10.2%} {:<10.2%} {:<10.2%} {:<10.2%} {:<10.2%}\".format(\n",
@@ -986,7 +986,7 @@
     "            metrics[level]['CER'],\n",
     "            metrics[level]['MER'],\n",
     "            metrics[level]['WIL'],\n",
-    "            metrics[level]['PIER']\n",
+    "            metrics[level]['PIWER']\n",
     "        )\n",
     "    return result\n",
     "\n",
